# polars-vector-store

./: .gitignore  Justfile  README.md  benchmark.py  main.py  pyproject.toml
.github/workflows/: main-lint-test.yaml
benchmark_results/results/: benchmark_results_float16.csv  benchmark_results_float16_1024.csv  benchmark_results_float16_128.csv  benchmark_results_float16_384.csv  benchmark_results_float16_768.csv  benchmark_results_float32.csv  benchmark_results_float32_1024.csv  benchmark_results_float32_128.csv  benchmark_results_float32_384.csv  benchmark_results_float32_768.csv  benchmark_results_float64.csv
notebooks/: 1. create_embeddings.ipynb  2. playground.ipynb  3. raw-benchmarking.ipynb  4. visualize-benchmark-results.ipynb  create_embeddings.ipynb  playground.ipynb
polars_vector_store/: base.py  chroma.py
polars_vector_store/loader/: parquet.py
polars_vector_store/polars/: base.py  numpy_based.py  polars_argpartition.py  polars_top_k.py
tests/: conftest.py  test_vector_stores.py
