[project]
name = "python-repo-template"
version = "0.1.0"
description = "A template for Python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Giacometti" } ]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "polars>=1.23.0",
    "polars-argpartition>=0.0.3",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.9.5",
]
